[package]
name = "medusa"
version = "0.1.0"
edition = "2021"
authors = ["Dawda Borje Kujabi <dawdaborjekujabi@gmail.com>"]
description = "A lightning-fast in-memory key-value store built with Rust for learning and experimentation"
license = "MIT"
repository = "https://github.com/Legacy-Engineers/medusa"
keywords = ["redis", "key-value", "database", "learning", "rust"]
categories = ["database", "command-line-utilities"]

[dependencies]
once_cell = "1.21.3"

[[bin]]
name = "medusa"
path = "src/main.rs"

[[bin]]
name = "medusa-client"
path = "client.rs"

[[bin]]
name = "medusa-benchmark"
path = "benchmark_client.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
